temp fix for collapsing empty th until we can figure out how to remove it entirely

--- a/admin/css/picture-it-admin.css
+++ b/admin/css/picture-it-admin.css
@@ -3,6 +3,11 @@
  * included in this file.
  */
 
+ .picture-it--options .form-table th {
+   width: auto;
+   padding: 0;
+ }
+
 .pi-existing-sizes {
   display: flex;
   align-items: stretch;
